# aspinwall-example-widget

./: .gitignore  README.md  __widget__.py  meson.build  package
po/: POTFILES  com.github.aspinwall_ui.example.pot  en.po  example.pot  meson.build  org.dithernet.aspinwall.widgets.example.pot  update-po
schemas/: com.github.aspinwall_ui.example.gschema.xml  meson.build  org.dithernet.aspinwall.widgets.example.gschema.xml
